tests/purs/failing/OverlapAcrossModules/X.purs
module OverlapAcrossModules.X where
import OverlapAcrossModules.Class
data X
instance cxy :: C X y
